[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/VisionMode.gd" type="Script" id=1]
[ext_resource path="res://SFX/nightvision_off.wav" type="AudioStream" id=2]
[ext_resource path="res://SFX/nightvision.wav" type="AudioStream" id=3]

[node name="VisionMode" type="CanvasModulate"]

visible = false
color = Color( 0.0901961, 0.0745098, 0.25098, 1 )
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Off_Sownd" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "FX"

[node name="On_Sound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "FX"

[node name="Cooldown" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]


